# cugo_rs485_motor_control

./: .gitignore  README.md  pyproject.toml
scripts/: config.py  main.py  propo_control.py
scripts/cugo_rs485_motor_control/: __init__.py  blv_motor.py  modbus_rtu.py
sh/: kill_propo_control.sh  start_propo_control.sh
test/: demo_500rpm_3sec.py  propo_signal_test.py
